--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.1.1",
     "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-moment-shim": "0.6.1",
     "ember-cli-qunit": "0.3.20",
     "ember-cli-release": "0.2.3",
     "ember-cli-sri": "^1.0.1",
@@ -36,6 +37,7 @@
     "ember-data": "1.13.7",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
+    "ember-moment": "3.3.0",
     "emberfire": "1.5.0"
   }
 }
