--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "qunit": "~1.18.0",
     "firebase": "^2.1.0",
     "moment": ">= 2.8.0",
-    "moment-timezone": ">= 0.1.0"
+    "moment-timezone": ">= 0.1.0",
+    "aws-sdk-js": "~2.1.44"
   }
 }
