--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "broccoli-asset-rev": "^2.0.2",
     "ember-cli": "1.13.7",
     "ember-cli-app-version": "0.4.0",
+    "ember-cli-autoprefixer": "0.4.1",
     "ember-cli-babel": "^5.0.0",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
@@ -38,6 +39,7 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
     "ember-moment": "3.3.0",
+    "ember-portal": "0.0.4",
     "emberfire": "1.5.0"
   }
 }
