--- a/firebase.json
+++ b/firebase.json
@@ -2,7 +2,7 @@
   "firebase": "artefacts",
   "public": "dist",
   "rewrites": [{
-    "source": "*",
+    "source": "**",
     "destination": "/index.html"
   }]
 }
