--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,9 @@
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.18.0",
     "firebase": "^2.1.0",
-    "moment": ">= 2.8.0",
+    "moment": "~2.10.6",
     "moment-timezone": ">= 0.1.0",
-    "aws-sdk-js": "~2.1.44"
+    "aws-sdk-js": "~2.1.44",
+    "pikaday": "~1.3.3"
   }
 }
