--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,6 @@
     "firebase": "^2.1.0",
     "moment": "~2.10.6",
     "moment-timezone": ">= 0.1.0",
-    "aws-sdk-js": "~2.1.44",
-    "pikaday": "~1.3.3"
+    "aws-sdk-js": "~2.1.44"
   }
 }
