--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "ember-cli-app-version": "0.4.0",
     "ember-cli-autoprefixer": "0.4.1",
     "ember-cli-babel": "^5.0.0",
-    "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-htmlbars": "0.7.9",
     "ember-cli-htmlbars-inline-precompile": "^0.1.1",
@@ -33,6 +32,7 @@
     "ember-cli-moment-shim": "0.6.1",
     "ember-cli-qunit": "0.3.20",
     "ember-cli-release": "0.2.3",
+    "ember-cli-sass": "4.0.1",
     "ember-cli-sri": "^1.0.1",
     "ember-cli-uglify": "^1.0.1",
     "ember-computed-decorators": "0.1.4",
